feat(*): add eslint and prettier [POR-004]

--- a/src/components/AboutTitle.astro
+++ b/src/components/AboutTitle.astro
@@ -22,7 +22,7 @@ const { author, rol } = Astro.props;
       color: var(--primary-color);
     }
   }
-  .about-title::after {
+  .about-title__rol::after {
     content: "|";
     opacity: 1;
     display: inline-block;
