--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -49,6 +49,8 @@ const { text, company, imagePath, altText } = Astro.props;
       align-items: center;
       line-height: 22px;
       text-wrap: wrap;
+      font-size: 1.6rem;
+      font-weight: normal;
     }
     .work-text::before {
       content: "";
