--- a/src/components/CustomImage.astro
+++ b/src/components/CustomImage.astro
@@ -37,6 +37,7 @@ if (!images[imagePath])
   width={width}
   height={height}
   loading={loading}
+  title={altText}
   alt={altText}
   quality={quality}
 />
