--- a/src/components/Metadata.astro
+++ b/src/components/Metadata.astro
@@ -42,3 +42,7 @@ const t = useTranslations(lang);
 />
 <meta property="og:url" content={urlPage} />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link
+  rel="image_src"
+  href="https://agustincammarota.com/assets/website-agustin-cammarota.webp"
+/>
