--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -55,6 +55,7 @@ const navItems: Nav[] = [
                   currentPath === getRelativeLocaleUrl(lang, item.link),
               },
             ]}
+            title={item.name}
             href={getRelativeLocaleUrl(lang, item.link)}
             data-astro-prefetch="tap"
           >
