feat(*): add husky and documentation [POR-006]

--- a/src/components/DownloadButton.astro
+++ b/src/components/DownloadButton.astro
@@ -2,9 +2,7 @@
 import { Icon } from "astro-icon/components";
 
 interface Props {
-  link: string;
-  title: string;
-  ariaLabel: string;
+  link: string;title: string;ariaLabel: string;
   icon: string;
   linkText: string;
 }
