--- a/src/components/DownloadButton.astro
+++ b/src/components/DownloadButton.astro
@@ -2,7 +2,9 @@
 import { Icon } from "astro-icon/components";
 
 interface Props {
-  link: string;title: string;ariaLabel: string;
+  link: string;
+  title: string;
+  ariaLabel: string;
   icon: string;
   linkText: string;
 }
