feat(*): add e2e test [POR-009]

--- a/src/sections/Skills.astro
+++ b/src/sections/Skills.astro
@@ -107,6 +107,14 @@ const skills: Skill[] = [
         name: "webdriver",
         description: t("skills.webdriver.description"),
       },
+      {
+        name: "vitest",
+        description: t("skills.vitest.description"),
+      },
+      {
+        name: "playwright",
+        description: t("skills.playwright.description"),
+      },
     ],
   },
   {
