--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -115,4 +115,20 @@ const navItems: Nav[] = [
       }
     }
   }
+  /* @media */
+  @media (min-width: 900px) {
+    .navbar {
+      height: 85px;
+    }
+    .list-item {
+      svg {
+        width: 28px;
+        height: 28px;
+      }
+      .list-item__link {
+        row-gap: 8px;
+        font-size: 1.6rem;
+      }
+    }
+  }
 </style>
