--- a/src/components/SkillCard.astro
+++ b/src/components/SkillCard.astro
@@ -120,4 +120,9 @@ const { title, icons } = Astro.props;
       min-width: 350px;
     }
   }
+  @media (min-width: 900px) {
+    .skill-card {
+      max-width: 450px;
+    }
+  }
 </style>
