--- a/src/sections/About.astro
+++ b/src/sections/About.astro
@@ -50,7 +50,8 @@ const t = useTranslations(lang);
   }
   .about-section {
     width: 100%;
-    margin-bottom: 100px;
+    max-width: 1100px;
+    margin: 0 auto 100px;
     height: auto;
 
     p {
@@ -63,8 +64,10 @@ const t = useTranslations(lang);
   }
   /* @media */
   @media (min-width: 600px) {
+    .about-section {
+      margin-top: 24px;
+    }
     .about-grid {
-      margin-top: 16px;
       display: grid;
       grid-template-areas:
         "title banner"
@@ -91,14 +94,16 @@ const t = useTranslations(lang);
     }
   }
   @media (min-width: 900px) {
+    .about-section {
+      margin-top: 32px;
+    }
     .about-grid {
-      margin: 16px auto;
-      column-gap: 120px;
-      max-width: 1200px;
+      margin: 0 auto;
+      column-gap: 130px;
     }
     .about-container {
       p {
-        line-height: 32px;
+        line-height: 36px;
       }
     }
   }
